Trial and error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,13 @@
 [build-system]
-requires = ["setuptools", "setuptools_scm", "wheel"]
+requires = [
+    "setuptools", 
+    "setuptools_scm", 
+    "wheel"
+]
 build-backend = "setuptools.build_meta"
+
+[metadata]
+version = "2022.4.3"
 
 [tool.setuptools_scm]
 write_to = "src/pipa/_version.py"
