--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ classifiers =
     License :: OSI Approved :: MIT License
 
 [options]
+python_requires = >=3.8
 package_dir = 
     =src
 packages = find:
