Optimized coverage execution and reporting

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,8 +45,17 @@ ignore = E203, W503
 
 [coverage:run]
 branch = True
+omit =
+    */_version.py
+
+[coverage:paths]
+source = 
+    src/pipa/
+    */site-packages/pipa/
 
 [coverage:report]
+show_missing = True
+skip_covered = True
 precision = 2
 exclude_lines =
     pragma: no cover
