--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = pipa
+name = piipaa
 version = 2022.4.2
 description = Python Installs Python anywhere.
-url = https://github.com/sthagen/pipa
+url = https://github.com/sthagen/piipaa
 author = Stefan Hagen
 author_email = "Stefan Hagen" <stefan@hagen.link>
 long_description = file: README.md
@@ -23,11 +23,11 @@ include_package_data = True
 where = src
 exclude =
     test*
-    src/pipa/__pycache__*
+    src/piipaa/__pycache__*
 
 [options.entry_points]
 console_scripts =
-    pipa = pipa.cli:main
+    piipaa = piipaa.cli:main
 
 [bdist_wheel]
 universal = True
@@ -50,8 +50,8 @@ omit =
 
 [coverage:paths]
 source = 
-    src/pipa/
-    */site-packages/pipa/
+    src/piipaa/
+    */site-packages/piipaa/
 
 [coverage:report]
 show_missing = True
