--- a/test/requirements-dev.txt
+++ b/test/requirements-dev.txt
@@ -8,5 +8,6 @@ mkdocstrings==0.18.1
 mypy==0.942
 pycodestyle==2.8.0
 pyflakes==2.4.0
+twine==4.0.0
 types-jmespath==0.10.2
 types-requests==2.27.16
