Migrated to tox (WIP)

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,18 @@ universal = True
 testpaths = test
 filterwarnings = error
 
+[tox:tox]
+isolated_build = True
+envlist = py310
+
+[testenv]
+deps =
+    pytest
+    pytest-cov
+commands =
+    pytest {posargs}
+    coverage html
+
 [flake8]
 max-line-length = 120
 max-complexity = 15
