Added tox for 3.8, 3.9 and specialized tox for 3.10 to run tests with coverage (build chain meta data)

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,11 +38,21 @@ filterwarnings = error
 
 [tox:tox]
 isolated_build = True
-envlist = py310
+envlist = py310,py39,py38
+
+[testimports]
+deps =
+    pytest
 
 [testenv]
 deps =
-    pytest
+    {[testimports]deps}
+commands =
+    pytest {posargs}
+
+[testenv:py310]
+deps =
+    {[testimports]deps}
     pytest-cov
 commands =
     pytest {posargs}
