Added lint, typecheck, and format tox environments

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,28 @@ deps =
 commands =
     pytest {posargs}
 
+[testenv:format]
+skip_install = True
+deps =
+    black
+    isort
+commands =
+    black {posargs:--check --diff src test}
+    isort {posargs:--check-only --df src test}
+
+[testenv:lint]
+skip_install = True
+deps =
+    flake8
+commands =
+    flake8 {posargs:src test}
+
+[testenv:typecheck]
+deps =
+    mypy
+commands =
+    mypy {posargs:src}
+
 [testenv:py310]
 deps =
     {[testimports]deps}
