--- a/.editorconfig
+++ b/.editorconfig
@@ -26,6 +26,7 @@ indent_size = 4
 [*.{py,java,r,R}]
 indent_style = space
 indent_size = 4
+max_line_length = 120
 
 # 4 tab indentation
 [*.go]
@@ -52,3 +53,12 @@ curly_bracket_next_line = false
 indent_brace_style = BSD
 spaces_around_operators = true
 spaces_around_brackets = none
+max_line_length = 150
+
+[*.rs]
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+indent_style = space
+indent_size = 4
+max_line_length = 120
