Using module loader for tools as the iunstalled scripts approach broke, bumped version, and linter happiness

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = piipaa
-version = 2022.4.3
+version = 2022.5.1
 description = Python Installs Python anywhere.
 url = https://github.com/sthagen/piipaa
 author = Stefan Hagen
@@ -9,12 +9,12 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT
 license_files = LICENSE
-classifiers = 
+classifiers =
     License :: OSI Approved :: MIT License
 
 [options]
 python_requires = >=3.8
-package_dir = 
+package_dir =
     =src
 packages = find:
 include_package_data = True
@@ -48,7 +48,15 @@ deps =
 deps =
     {[testimports]deps}
 commands =
-    pytest {posargs}
+    python -m pytest {posargs}
+
+[testenv:py310]
+deps =
+    {[testimports]deps}
+    pytest-cov
+commands =
+    python -m pytest {posargs}
+    python -m coverage html
 
 [testenv:format]
 skip_install = True
@@ -56,36 +64,21 @@ deps =
     black
     isort
 commands =
-    black {posargs:--check --diff src test}
-    isort {posargs:--check-only --df src test}
+    python -m black {posargs:--check --diff src test}
+    python -m isort {posargs:--check-only --df src test}
 
 [testenv:lint]
 skip_install = True
 deps =
     flake8
 commands =
-    flake8 {posargs:src test}
+    python -m flake8 {posargs:src test}
 
 [testenv:typecheck]
 deps =
     mypy
 commands =
-    mypy {posargs:src}
-
-[testenv:py310]
-deps =
-    {[testimports]deps}
-    pytest-cov
-commands =
-    pytest {posargs}
-    coverage html
-
-[flake8]
-max-line-length = 120
-max-complexity = 15
-inline-quotes = '
-multiline-quotes = """
-ignore = E203, W503
+    python -m mypy {posargs:src}
 
 [coverage:run]
 branch = True
@@ -93,7 +86,7 @@ omit =
     */_version.py
 
 [coverage:paths]
-source = 
+source =
     src/piipaa/
     */site-packages/piipaa/
 
@@ -121,3 +114,9 @@ combine_as_imports=True
 [mypy]
 strict = True
 
+[flake8]
+max-line-length = 120
+max-complexity = 15
+ignore = E203, W503
+inline-quotes = '
+multiline-quotes = """
