--- a/test/requirements-dev.txt
+++ b/test/requirements-dev.txt
@@ -6,8 +6,9 @@ isort==5.10.1
 mkautodoc==0.1.0
 mkdocstrings==0.19.0
 mypy==0.961
+packaging==21.3
 pycodestyle==2.8.0
 pyflakes==2.4.0
 twine==4.0.1
-types-jmespath==1.0.0
+types-jmespath==1.0.1
 types-requests==2.28.0
